# backend/openapi/UKPS.Api.json
@@ -1099,23 +1099,23 @@
         "tags": [
           "User"
         ],
-        "summary": "Creates a new user.",
+        "summary": "Registers a new user.",
         "requestBody": {
-          "description": "A token used to cancel the operation&gt;",
+          "description": "A token used to cancel the operation.",
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/CreateUserRequestDto"
+                "$ref": "#/components/schemas/RegisterUserDto"
               }
             },
             "text/json": {
               "schema": {
-                "$ref": "#/components/schemas/CreateUserRequestDto"
+                "$ref": "#/components/schemas/RegisterUserDto"
               }
             },
             "application/*+json": {
               "schema": {
-                "$ref": "#/components/schemas/CreateUserRequestDto"
+                "$ref": "#/components/schemas/RegisterUserDto"
               }
             }
           },
@@ -1123,7 +1123,7 @@
         },
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "    An ActionResult&lt;TValue&gt; containing the registered user's details when the\n    operation succeeds. Returns:\n    * 400 Bad Request if some of the required data is missing.\n* 404 Not Found if the specified organisation does not exist.\n* 409 Conflict if a user with the supplied email address is already registered.",
             "content": {
               "text/plain": {
                 "schema": {
@@ -1138,66 +1138,6 @@
               "text/json": {
                 "schema": {
                   "$ref": "#/components/schemas/UserDetailsDto"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              }
-            }
-          },
-          "404": {
-            "description": "Not Found",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              }
-            }
-          },
-          "409": {
-            "description": "Conflict",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
                 }
               }
             }
@@ -1743,6 +1683,34 @@
             ]
           }
         }
+      },
+      "RegisterUserDto": {
+        "required": [
+          "fullName",
+          "workEmail",
+          "phoneNumber",
+          "organisation"
+        ],
+        "type": "object",
+        "properties": {
+          "fullName": {
+            "type": "string",
+            "description": "Gets the user's full name."
+          },
+          "workEmail": {
+            "type": "string",
+            "description": "Gets the user's work email address."
+          },
+          "phoneNumber": {
+            "type": "string",
+            "description": "Gets the user phone number."
+          },
+          "organisation": {
+            "type": "string",
+            "description": "Gets the name of the organisation the user is requesting access to."
+          }
+        },
+        "description": "Represents the information required to register a new user."
       },
       "RespondToMultiFactorAuthenticationChallengeCommand": {
         "required": [
